# piu-annotate_to_label_piu

./: .gitignore  Makefile  README.md  benchmark_results.txt  hackerargs.py  pyproject.toml  requirements.txt  samples_doubles.txt  samples_singles.txt  setup.py  sync_to_piulatam.py
cli/analysis/: get_run_stats.py  get_segment_difficulty_stats.py
cli/chartjson/: convert_chartstructs_to_json.py  make_search_json.py
cli/debug/: annotate_skills.py  check_hands.py  check_limb_annots.py  check_pattern_reasoning.py  inspect_stepchart_ssc.py
cli/difficulty/: annotate_segment_difficulty_with_segment_model.py  annotate_segment_difficulty_with_stepchart_model.py  train_difficulty_predictor.py  train_segment_difficulty.py
cli/display_metadata/: enps_timeline.py  segment_skills.py  similar_charts.py  similar_segments.py  update_chartstruct_holdticks_metadata.py
cli/ingest/: crawl_piu_simfiles.py  make_chartstructs.py  match_cs_to_json.py  piu_simfiles_to_chartstruct.py  process_db_matches.py  update_chartstruct_with_manual_json.py  update_folder_chartstruct_with_json.py
cli/limbuse/: eval_models.py  inspect_predict_limb.py  predict_limbs.py  train_lgbm.py
cli/misc/: notecount.py
cli/old/: load_piucenter_df.py  piucenter_dijkstra_to_chartstruct.py
cli/page_content/: chart_table.py  skills_page.py  (+1 more)
docs/: limb_annotation_plan.md
jupyter/: nps-vs-sustain-time.ipynb
piu_annotate/: agent_tools.py  crawl.py  utils.py
scratch/: quick_eval.py
scripts/: analyze_chart.py  batch_analyze.py  benchmark_annotations.py  visss_to_chartstruct.py
tests/: __init__.py
(+27 files in other folders)
